client: mobile letter spacing bug

--- a/client/src/pages/landing/Components/Footer/Copyright/styles.module.scss
+++ b/client/src/pages/landing/Components/Footer/Copyright/styles.module.scss
@@ -30,3 +30,17 @@
 		}
 	}
 }
+
+@media screen and (max-width: 750px) {
+	.container {
+		h1 {
+			font-size: calc(1vw + 0.3rem);
+		}
+
+		.links {
+			& > * {
+				font-size: calc(1vw + 0.2rem);
+			}
+		}
+	}
+}
